# Registration_And_Authentication_With_Axum

./: .env  Cargo.toml  Dockerfile  README.md  compose.yml
migrations/: 20250204090735_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs
src/utils/: mod.rs
