[package]
name = "backend_with_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2="0.5.3"
async-trait = "0.1.86"
chrono = "0.4.39"
dotenv="0.15.0"
json-web-token = "0.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx={version = "0.8.3",features = ["runtime-async-std-native-tls","postgres","chrono","uuid"]}
uuid = { version = "1.12.1" ,features = ["serde","v4"]}
validator = { version = "0.20.0", features = ["derive"]}
axum="0.8.1"
axum-extra = { version = "0.10.0",features = ["cookie"] }
tokio = { version = "1.43.0",features = ["full"] }
tower = "0.5.2"
time = "0.3.37"
tower-http = { version = "0.6.2" ,features = ["cors","trace"]}
tracing-subscriber = "0.3.19"
lettre = "0.11.12 "